2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Refactor.  Split `TOKEN_HORIZONTAL_MOTION` token type
	into two, leaving the existing one for `\0`, `\^`, and `\|`
	escape sequences, and creating a new
	`TOKEN_DELIMITED_HORIZONTAL_MOTION` for the parameterized `\h`
	escape sequence.

	* src/roff/troff/token.h (class token): Add new
	`TOKEN_DELIMITED_HORIZONTAL_MOTION` enumeration constant.
	(token::is_horizontal_motion): Return `true` for both new and
	old token types.
	* src/roff/troff/input.cpp (token::next) <h>: Tokenize `h`
	escape sequence as `TOKEN_DELIMITED_HORIZONTAL_MOTION`.
	(token::is_usable_as_delimiter): Reject
	`TOKEN_DELIMITED_HORIZONTAL_MOTION` instead of
	`TOKEN_HORIZONTAL_MOTION` as a delimiter.
	(token::next <z>, process_input_stack)
	(token::add_to_zero_width_node_list, token::process): Treat new
	token type the same as the old one.
	(token::description): Describe new token type distinctly.

	* src/roff/groff/tests/check-delimiter-validity.sh: Delete check
	for invalidity of `\0`, `\^`, and `\|` as delimiters--they're
	valid again now.

	* doc/groff.texi.in (Delimiters):
	* man/groff.7.man (Delimiters): Re-document `\0`, `\^`, and `\|`
	as valid delimiters.

2025-12-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/token.h (class token): Trivially refactor.
	Sort enumeration constants lexicographically by their symbol
	names.  It seems that they once were thus sorted (except for
	`TOKEN_EOF`), but my renaming activities have effaced that.
	Restore that ordering, but stop treating `TOKEN_EOF` specially.
	Its magnitude is never compared to anything (and shouldn't be).

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/pdf-device-smoke-test.sh: New file.
	* src/roff/groff/groff.am (groff_TESTS): Run test.

2025-12-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/lj4-device-smoke-test.sh: New file.