@@ -104,6 +104,7 @@ groff_TESTS = \
   src/roff/groff/tests/pchar-request-works.sh \
   src/roff/groff/tests/pdf-device-smoke-test.sh \
   src/roff/groff/tests/pi-request-works.sh \
+  src/roff/groff/tests/po-request-works.sh \
   src/roff/groff/tests/ps-device-smoke-test.sh \
   src/roff/groff/tests/recognize-end-of-sentence.sh \
   src/roff/groff/tests/regression_savannah_56555.sh \
